--- a/config/database.yml
+++ b/config/database.yml
@@ -23,6 +23,8 @@ default: &default
 development:
   <<: *default
   database: route_translator_test_development
+  host: localhost
+  port: 5432
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -57,6 +59,8 @@ development:
 test:
   <<: *default
   database: route_translator_test_test
+  host: localhost
+  port: 5432
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
